--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   injectable: ^2.5.0
   json_annotation: ^4.9.0
   scrollable_text_indicator: ^0.0.2
+  path_provider: ^2.1.5
+  path: ^1.9.1
 
 dev_dependencies:
   flutter_test:
